erDiagram
    USER ||--o{ CHAT_SESSION : owns
    CHAT_SESSION ||--o{ CHAT_MESSAGE : contains
    USER ||--o{ NOTE : creates
    USER ||--|| SUBSCRIPTION : has
    USER ||--o{ ANALYTICS_RECORD : generates
    USER ||--o{ STUDY_PLAN : builds
    STUDY_PLAN ||--o{ QUIZ : includes
    QUIZ ||--o{ FLASHCARD : contains

    USER {
      int id
      string name
      string email
      boolean is_premium
      datetime created_at
    }

    CHAT_SESSION {
      int id
      int user_id
      string title
      datetime created_at
    }

    CHAT_MESSAGE {
      int id
      int session_id
      string role
      string content
      datetime created_at
    }

    NOTE {
      int id
      int user_id
      string title
      string content
      datetime created_at
    }

    SUBSCRIPTION {
      int id
      int user_id
      string plan
      string status
      datetime active_until
    }

    ANALYTICS_RECORD {
      int id
      int user_id
      string event_type
      datetime created_at
    }

    STUDY_PLAN {
      int id
      int user_id
      string title
      datetime created_at
    }

    QUIZ {
      int id
      int study_plan_id
      string title
      datetime created_at
    }

    FLASHCARD {
      int id
      int quiz_id
      string front_text
      string back_text
    }